sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:8: error: illegal start of simple expression
    var ind=j;
    ^AlgSelectionSort:16: error: ')' expected but '}' found.
    }
    ^AlgSelectionSort:22: error: Unmatched closing brace '}' ignored here
}
^